src/objects/pdb_trip_info__x.object
<CustomObject>
    <description>caesars$pdb_trip_info</description>
    <externalDataSource>CustomApexHerokuConnector</externalDataSource>
    <externalName>caesars$pdb_trip_info</externalName>
    <fields>
        <fullName>account_c_prop_cd_fk__c</fullName>
        <description>account_c_prop_cd_fk</description>
        <externalDeveloperName>account_c_prop_cd_fk</externalDeveloperName>
        <label>account_c_prop_cd_fk</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_prop_cd__c</fullName>
        <description>c_prop_cd</description>
        <externalDeveloperName>c_prop_cd</externalDeveloperName>
        <label>c_prop_cd</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_user_flag_1__c</fullName>
        <description>c_user_flag_1</description>
        <externalDeveloperName>c_user_flag_1</externalDeveloperName>
        <label>c_user_flag_1</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_user_flag_2__c</fullName>
        <description>c_user_flag_2</description>
        <externalDeveloperName>c_user_flag_2</externalDeveloperName>
        <label>c_user_flag_2</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_user_flag_3__c</fullName>
        <description>c_user_flag_3</description>
        <externalDeveloperName>c_user_flag_3</externalDeveloperName>
        <label>c_user_flag_3</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contact_fk__c</fullName>
        <description>contact_fk</description>
        <externalDeveloperName>contact_fk</externalDeveloperName>
        <label>contact_fk</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_end_dt__c</fullName>
        <description>d_end_dt</description>
        <externalDeveloperName>d_end_dt</externalDeveloperName>
        <label>d_end_dt</label>
        <type>Text</type>
        <length>40</length>
    </fields>
    <fields>
        <fullName>d_start_dt__c</fullName>
        <description>d_start_dt</description>
        <externalDeveloperName>d_start_dt</externalDeveloperName>
        <label>d_start_dt</label>
        <type>Text</type>
        <length>40</length>
    </fields>
    <fields>
        <fullName>f_cash_cost__c</fullName>
        <description>f_cash_cost</description>
        <externalDeveloperName>f_cash_cost</externalDeveloperName>
        <label>f_cash_cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_cash_value__c</fullName>
        <description>f_cash_value</description>
        <externalDeveloperName>f_cash_value</externalDeveloperName>
        <label>f_cash_value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_cashless_cost__c</fullName>
        <description>f_cashless_cost</description>
        <externalDeveloperName>f_cashless_cost</externalDeveloperName>
        <label>f_cashless_cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_cashless_value__c</fullName>
        <description>f_cashless_value</description>
        <externalDeveloperName>f_cashless_value</externalDeveloperName>
        <label>f_cashless_value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_exl_from_profitb_value__c</fullName>
        <description>f_exl_from_profitb_value</description>
        <externalDeveloperName>f_exl_from_profitb_value</externalDeveloperName>
        <label>f_exl_from_profitb_value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_hotel_cost__c</fullName>
        <description>f_hotel_cost</description>
        <externalDeveloperName>f_hotel_cost</externalDeveloperName>
        <label>f_hotel_cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_hotel_value__c</fullName>
        <description>f_hotel_value</description>
        <externalDeveloperName>f_hotel_value</externalDeveloperName>
        <label>f_hotel_value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_other_cost1__c</fullName>
        <description>f_other_cost1</description>
        <externalDeveloperName>f_other_cost1</externalDeveloperName>
        <label>f_other_cost1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_other_cost2__c</fullName>
        <description>f_other_cost2</description>
        <externalDeveloperName>f_other_cost2</externalDeveloperName>
        <label>f_other_cost2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_other_cost3__c</fullName>
        <description>f_other_cost3</description>
        <externalDeveloperName>f_other_cost3</externalDeveloperName>
        <label>f_other_cost3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_other_value__c</fullName>
        <description>f_other_value</description>
        <externalDeveloperName>f_other_value</externalDeveloperName>
        <label>f_other_value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_total_cost__c</fullName>
        <description>f_total_cost</description>
        <externalDeveloperName>f_total_cost</externalDeveloperName>
        <label>f_total_cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_trip_value1__c</fullName>
        <description>f_trip_value1</description>
        <externalDeveloperName>f_trip_value1</externalDeveloperName>
        <label>f_trip_value1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_trip_value2__c</fullName>
        <description>f_trip_value2</description>
        <externalDeveloperName>f_trip_value2</externalDeveloperName>
        <label>f_trip_value2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_trip_value3__c</fullName>
        <description>f_trip_value3</description>
        <externalDeveloperName>f_trip_value3</externalDeveloperName>
        <label>f_trip_value3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_user_amt_10__c</fullName>
        <description>f_user_amt_10</description>
        <externalDeveloperName>f_user_amt_10</externalDeveloperName>
        <label>f_user_amt_10</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_user_amt_1__c</fullName>
        <description>f_user_amt_1</description>
        <externalDeveloperName>f_user_amt_1</externalDeveloperName>
        <label>f_user_amt_1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_user_amt_2__c</fullName>
        <description>f_user_amt_2</description>
        <externalDeveloperName>f_user_amt_2</externalDeveloperName>
        <label>f_user_amt_2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_cash_coup__c</fullName>
        <description>i_cash_coup</description>
        <externalDeveloperName>i_cash_coup</externalDeveloperName>
        <label>i_cash_coup</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_cashless_coup__c</fullName>
        <description>i_cashless_coup</description>
        <externalDeveloperName>i_cashless_coup</externalDeveloperName>
        <label>i_cashless_coup</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_dmid__c</fullName>
        <description>i_dmid</description>
        <externalDeveloperName>i_dmid</externalDeveloperName>
        <label>i_dmid</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>i_exl_from_profitb_coup__c</fullName>
        <description>i_exl_from_profitb_coup</description>
        <externalDeveloperName>i_exl_from_profitb_coup</externalDeveloperName>
        <label>i_exl_from_profitb_coup</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_hotel_coup__c</fullName>
        <description>i_hotel_coup</description>
        <externalDeveloperName>i_hotel_coup</externalDeveloperName>
        <label>i_hotel_coup</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_offers__c</fullName>
        <description>i_offers</description>
        <externalDeveloperName>i_offers</externalDeveloperName>
        <label>i_offers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_other_coup__c</fullName>
        <description>i_other_coup</description>
        <externalDeveloperName>i_other_coup</externalDeveloperName>
        <label>i_other_coup</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_pdb_trip_id__c</fullName>
        <description>i_pdb_trip_id</description>
        <externalDeveloperName>i_pdb_trip_id</externalDeveloperName>
        <label>i_pdb_trip_id</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>i_pdb_trip_id_fk__c</fullName>
        <description>i_pdb_trip_id_fk</description>
        <externalDeveloperName>i_pdb_trip_id_fk</externalDeveloperName>
        <label>i_pdb_trip_id_fk</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_total_coup__c</fullName>
        <description>i_total_coup</description>
        <externalDeveloperName>i_total_coup</externalDeveloperName>
        <label>i_total_coup</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_user_score_10__c</fullName>
        <description>i_user_score_10</description>
        <externalDeveloperName>i_user_score_10</externalDeveloperName>
        <label>i_user_score_10</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_user_score_1__c</fullName>
        <description>i_user_score_1</description>
        <externalDeveloperName>i_user_score_1</externalDeveloperName>
        <label>i_user_score_1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_user_score_2__c</fullName>
        <description>i_user_score_2</description>
        <externalDeveloperName>i_user_score_2</externalDeveloperName>
        <label>i_user_score_2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <description>id</description>
        <externalDeveloperName>id</externalDeveloperName>
        <label>id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>caesars$pdb_trip_info</label>
    <pluralLabel>caesars$pdb_trip_info</pluralLabel>
</CustomObject>